fixing menu collapsible button flicker on click.

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/TheAdmin.scss
@@ -271,7 +271,7 @@ body:not(.left-sidebar-compact) {
                 outline: none;
             }
 
-            .btn-nostyle:focus {
+            .btn-nostyle:focus, .btn-nostyle:active {
                 background-color: rgba(0, 0, 0, 0.3);
                 color: white;
             }
